Add label endpoint and regenerate SDK
