# python-sdk/src/intellioptics/generated/openapi/api/default/create_detector_v1_detectors_post.py
@@ -1,30 +1,21 @@
 from http import HTTPStatus
-from typing import Any, Optional, Union, cast
+from typing import Any, Optional, Union
 
 import httpx
 
-from ...client import AuthenticatedClient, Client
-from ...types import Response, UNSET
 from ... import errors
-
+from ...client import AuthenticatedClient, Client
 from ...models.detector_create import DetectorCreate
 from ...models.detector_out import DetectorOut
 from ...models.http_validation_error import HTTPValidationError
-from typing import cast
-
+from ...types import Response
 
 
 def _get_kwargs(
     *,
     body: DetectorCreate,
-
 ) -> dict[str, Any]:
     headers: dict[str, Any] = {}
-
-
-    
-
-    
 
     _kwargs: dict[str, Any] = {
         "method": "post",
@@ -33,26 +24,22 @@ def _get_kwargs(
 
     _kwargs["json"] = body.to_dict()
 
-
     headers["Content-Type"] = "application/json"
 
     _kwargs["headers"] = headers
     return _kwargs
 
 
-
-def _parse_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Optional[Union[DetectorOut, HTTPValidationError]]:
+def _parse_response(
+    *, client: Union[AuthenticatedClient, Client], response: httpx.Response
+) -> Optional[Union[DetectorOut, HTTPValidationError]]:
     if response.status_code == 200:
         response_200 = DetectorOut.from_dict(response.json())
-
-
 
         return response_200
 
     if response.status_code == 422:
         response_422 = HTTPValidationError.from_dict(response.json())
-
-
 
         return response_422
 
@@ -62,7 +49,9 @@ def _parse_response(*, client: Union[AuthenticatedClient, Client], response: htt
         return None
 
 
-def _build_response(*, client: Union[AuthenticatedClient, Client], response: httpx.Response) -> Response[Union[DetectorOut, HTTPValidationError]]:
+def _build_response(
+    *, client: Union[AuthenticatedClient, Client], response: httpx.Response
+) -> Response[Union[DetectorOut, HTTPValidationError]]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -75,9 +64,8 @@ def sync_detailed(
     *,
     client: Union[AuthenticatedClient, Client],
     body: DetectorCreate,
-
 ) -> Response[Union[DetectorOut, HTTPValidationError]]:
-    """ Create Detector
+    """Create Detector
 
     Args:
         body (DetectorCreate):
@@ -88,12 +76,10 @@ def sync_detailed(
 
     Returns:
         Response[Union[DetectorOut, HTTPValidationError]]
-     """
-
+    """
 
     kwargs = _get_kwargs(
         body=body,
-
     )
 
     response = client.get_httpx_client().request(
@@ -102,13 +88,13 @@ def sync_detailed(
 
     return _build_response(client=client, response=response)
 
+
 def sync(
     *,
     client: Union[AuthenticatedClient, Client],
     body: DetectorCreate,
-
 ) -> Optional[Union[DetectorOut, HTTPValidationError]]:
-    """ Create Detector
+    """Create Detector
 
     Args:
         body (DetectorCreate):
@@ -119,22 +105,20 @@ def sync(
 
     Returns:
         Union[DetectorOut, HTTPValidationError]
-     """
-
+    """
 
     return sync_detailed(
         client=client,
-body=body,
-
+        body=body,
     ).parsed
+
 
 async def asyncio_detailed(
     *,
     client: Union[AuthenticatedClient, Client],
     body: DetectorCreate,
-
 ) -> Response[Union[DetectorOut, HTTPValidationError]]:
-    """ Create Detector
+    """Create Detector
 
     Args:
         body (DetectorCreate):
@@ -145,27 +129,23 @@ async def asyncio_detailed(
 
     Returns:
         Response[Union[DetectorOut, HTTPValidationError]]
-     """
-
+    """
 
     kwargs = _get_kwargs(
         body=body,
-
     )
 
-    response = await client.get_async_httpx_client().request(
-        **kwargs
-    )
+    response = await client.get_async_httpx_client().request(**kwargs)
 
     return _build_response(client=client, response=response)
+
 
 async def asyncio(
     *,
     client: Union[AuthenticatedClient, Client],
     body: DetectorCreate,
-
 ) -> Optional[Union[DetectorOut, HTTPValidationError]]:
-    """ Create Detector
+    """Create Detector
 
     Args:
         body (DetectorCreate):
@@ -176,11 +156,11 @@ async def asyncio(
 
     Returns:
         Union[DetectorOut, HTTPValidationError]
-     """
+    """
 
-
-    return (await asyncio_detailed(
-        client=client,
-body=body,
-
-    )).parsed
+    return (
+        await asyncio_detailed(
+            client=client,
+            body=body,
+        )
+    ).parsed
