# python-sdk/src/intellioptics/generated/openapi/api/default/create_label_v1_labels_post.py
@@ -5,27 +5,36 @@ import httpx
 
 from ... import errors
 from ...client import AuthenticatedClient, Client
-from ...models.answer_out import AnswerOut
 from ...models.http_validation_error import HTTPValidationError
+from ...models.label_in import LabelIn
+from ...models.label_out import LabelOut
 from ...types import Response
 
 
 def _get_kwargs(
-    iq_id: str,
+    *,
+    body: LabelIn,
 ) -> dict[str, Any]:
+    headers: dict[str, Any] = {}
+
     _kwargs: dict[str, Any] = {
-        "method": "get",
-        "url": f"/v1/image-queries/{iq_id}",
+        "method": "post",
+        "url": "/v1/labels",
     }
 
+    _kwargs["json"] = body.to_dict()
+
+    headers["Content-Type"] = "application/json"
+
+    _kwargs["headers"] = headers
     return _kwargs
 
 
 def _parse_response(
     *, client: Union[AuthenticatedClient, Client], response: httpx.Response
-) -> Optional[Union[AnswerOut, HTTPValidationError]]:
+) -> Optional[Union[HTTPValidationError, LabelOut]]:
     if response.status_code == 200:
-        response_200 = AnswerOut.from_dict(response.json())
+        response_200 = LabelOut.from_dict(response.json())
 
         return response_200
 
@@ -42,7 +51,7 @@ def _parse_response(
 
 def _build_response(
     *, client: Union[AuthenticatedClient, Client], response: httpx.Response
-) -> Response[Union[AnswerOut, HTTPValidationError]]:
+) -> Response[Union[HTTPValidationError, LabelOut]]:
     return Response(
         status_code=HTTPStatus(response.status_code),
         content=response.content,
@@ -52,25 +61,25 @@ def _build_response(
 
 
 def sync_detailed(
-    iq_id: str,
     *,
     client: Union[AuthenticatedClient, Client],
-) -> Response[Union[AnswerOut, HTTPValidationError]]:
-    """Get Image Query
+    body: LabelIn,
+) -> Response[Union[HTTPValidationError, LabelOut]]:
+    """Create Label
 
     Args:
-        iq_id (str):
+        body (LabelIn):
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[Union[AnswerOut, HTTPValidationError]]
+        Response[Union[HTTPValidationError, LabelOut]]
     """
 
     kwargs = _get_kwargs(
-        iq_id=iq_id,
+        body=body,
     )
 
     response = client.get_httpx_client().request(
@@ -81,49 +90,49 @@ def sync_detailed(
 
 
 def sync(
-    iq_id: str,
     *,
     client: Union[AuthenticatedClient, Client],
-) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    """Get Image Query
+    body: LabelIn,
+) -> Optional[Union[HTTPValidationError, LabelOut]]:
+    """Create Label
 
     Args:
-        iq_id (str):
+        body (LabelIn):
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Union[AnswerOut, HTTPValidationError]
+        Union[HTTPValidationError, LabelOut]
     """
 
     return sync_detailed(
-        iq_id=iq_id,
         client=client,
+        body=body,
     ).parsed
 
 
 async def asyncio_detailed(
-    iq_id: str,
     *,
     client: Union[AuthenticatedClient, Client],
-) -> Response[Union[AnswerOut, HTTPValidationError]]:
-    """Get Image Query
+    body: LabelIn,
+) -> Response[Union[HTTPValidationError, LabelOut]]:
+    """Create Label
 
     Args:
-        iq_id (str):
+        body (LabelIn):
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Response[Union[AnswerOut, HTTPValidationError]]
+        Response[Union[HTTPValidationError, LabelOut]]
     """
 
     kwargs = _get_kwargs(
-        iq_id=iq_id,
+        body=body,
     )
 
     response = await client.get_async_httpx_client().request(**kwargs)
@@ -132,26 +141,26 @@ async def asyncio_detailed(
 
 
 async def asyncio(
-    iq_id: str,
     *,
     client: Union[AuthenticatedClient, Client],
-) -> Optional[Union[AnswerOut, HTTPValidationError]]:
-    """Get Image Query
+    body: LabelIn,
+) -> Optional[Union[HTTPValidationError, LabelOut]]:
+    """Create Label
 
     Args:
-        iq_id (str):
+        body (LabelIn):
 
     Raises:
         errors.UnexpectedStatus: If the server returns an undocumented status code and Client.raise_on_unexpected_status is True.
         httpx.TimeoutException: If the request takes longer than Client.timeout.
 
     Returns:
-        Union[AnswerOut, HTTPValidationError]
+        Union[HTTPValidationError, LabelOut]
     """
 
     return (
         await asyncio_detailed(
-            iq_id=iq_id,
             client=client,
+            body=body,
         )
     ).parsed
